Fixed box container's width because box went out of bounds

--- a/styles/index.css
+++ b/styles/index.css
@@ -121,9 +121,8 @@
 .main-box-container {
   /* border: 2px solid green; */
   display: flex;
-  /* justify-content: space-around; */
-  gap: 40px;
-  width: 600px;
+  justify-content: space-around;
+  width: 700px;
   margin-top: 30px;
 }
 
